--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,12 @@
-name: CI/CD for React
+name: CI/CD for React with Vercel
 
-# Trigger on push to main branch
 on:
   push:
     branches:
       - main
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,14 +21,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # - name: Run tests
-      #   run: npm test -- --watchAll=false
-
       - name: Build project
         run: npm run build
 
-      # Example deploy step (for server via SCP)
-      # - name: Deploy to Windows IIS
-      #   run: |
-      #     echo "Deploying to server..."
-      #     scp -r build/* user@your-server:/var/www/html
+      - name: Deploy to Vercel
+        run: npx vercel --prod --token=${{ secrets.TEST_VITE_PROJECT }}
+        env:
+          VERCEL_ORG_ID: ${{ secrets.ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.PROJECT_ID }}
